--- a/wcagemtool/app/views/directives/evaluate/infoButton.html
+++ b/wcagemtool/app/views/directives/evaluate/infoButton.html
@@ -1,1 +1,2 @@
-<a class="info-icon" href="" role="button"aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span><span class="sr-only">{{label}}</span></a>
+<a class="info-icon" href="" role="button" aria-expanded="false"><span
+        class="glyphicon glyphicon-info-sign"></span><span class="sr-only">{{label}}</span></a>
