--- a/wcagemtool/app/views/directives/evaluate/infoField.html
+++ b/wcagemtool/app/views/directives/evaluate/infoField.html
@@ -1,7 +1,6 @@
-<div class="alert alert-info infobox" id="{{ref}}" tabindex="-1"
-ng-keyup="close($event)">
+<div class="alert alert-info infobox" id="{{ref}}" tabindex="-1" ng-keyup="close($event)">
   <span class="floater"></span>
-  
+
   <div ng-transclude></div>
 
   <button class="close" ng-click="close($event)">
