--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -381,7 +381,7 @@ td {
 	border: solid #e5e5e5 1px;
 	padding: 1% 4%;
 	float: left;
-    width: 100%;
+	width: 100%;
 }
 
 #cajaformularios {
@@ -951,7 +951,6 @@ div.detail p {
 	font-variant: petite-caps;
 }
 
-
 #container_der table tr.suitability th, #fullwidthgrid table tr.suitability th {
 	background: silver
 }
@@ -967,7 +966,7 @@ div.detail p {
 }
 
 #extraConfigDialog table {
-	font-size:14px !important;
+	font-size: 14px !important;
 }
 
 #NuevaSemillaIpForm fieldset li {
@@ -1334,39 +1333,50 @@ to {
 .seedImportErrorList {
 	width: 100% !important;
 	text-align: left !important;
-	list-style-type: square  !important;
-	 list-style-position: inside;
+	list-style-type: square !important;
+	list-style-position: inside;
 }
 
 .seedImportErrorList>li {
-	    width: 100% !important;
-    text-align: left !important;
-    list-style-type: square !important;
-    display: list-item !important;
-	 list-style-position: inside;
+	width: 100% !important;
+	text-align: left !important;
+	list-style-type: square !important;
+	display: list-item !important;
+	list-style-position: inside;
 }
 
-.seedImportErrorList > li+li::before{
-	    content: "" !important;
+.seedImportErrorList>li+li::before {
+	content: "" !important;
 }
 
-#filterResultsThreshold{
-    padding: 5px;
-    width: 100%;
-    float: left;
-    clear: both;
-    margin-bottom: 10px;
+#filterResultsThreshold {
+	padding: 5px;
+	width: 100%;
+	float: left;
+	clear: both;
+	margin-bottom: 10px;
 }
 
 #filterResultsThreshold .form-group {
 	display: inline-block;
-    margin-bottom: 0;
-    vertical-align: middle;
+	margin-bottom: 0;
+	vertical-align: middle;
 }
+
 #filterResultsThreshold input {
-	margin-right:15px;
+	margin-right: 15px;
 }
 
 .summaryEntry {
-	margin-bottom:10px;
+	margin-bottom: 10px;
+}
+
+.sendResultIteration {
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-bottom: 20px;
+}
+
+.sendResultIteration h3{
+	margin-bottom: 15px;
 }
